core/src/ast/snapshots/diplomat_core__ast__functions__tests__free_function_lifetimes.snap
---
source: core/src/ast/functions.rs
expression: "Function::from_syn(&syn::parse_quote!\n{ fn some_func<'a>(a : &'a SomeType) -> Option<&'a SomeType> {} },\n&Attrs::default(), &crate::ast::SpanLocation::None)"
---
name:
  - some_func
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
abi_name:
  - diplomat_external_some_func
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
params:
  - name:
      - a
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    ty:
      Reference:
        - Named:
            - a
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
        - Immutable
        - Named:
            path:
              elements:
                - - SomeType
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
    attrs: {}
output_type:
  Option:
    - Reference:
        - Named:
            - a
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
        - Immutable
        - Named:
            path:
              elements:
                - - SomeType
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
    - Stdlib
lifetimes:
  ? - a
    - start_line: 1
      column_line: 0
      range:
        start: 0
        end: 0
      span_location: None
  : []
attrs: {}
docs:
  - - cfg: Star
      lines: ""
  - []
